--- a/application/modules/admin/views/scripts/history/index.phtml
+++ b/application/modules/admin/views/scripts/history/index.phtml
@@ -1,5 +1,5 @@
 <div class="container" style="padding: 10px;">
-  <h1 style="text-align: center;">歴史</h1>
+  <h1 style="text-align: center;">ログ</h1>
   <hr>
   <table class="table table-bordered table-hover">
     <thead>
